PDF Viewer pinch zoom: Compute the zoom needed for the paint offset.

Currently, when pinch zooming in, starting with a document that doesn't
cover the width of the plugin, we record the last zoom before the
document does cover the width. This value is used to compute the
|paint_offset| for the rest of the pinch. However, if the pinch is done
quickly, the last zoom value we record may differ significantly from the
zoom at which the rendered document width matches the plugin width. This
leads to an incorrect |paint_offset| as the gesture continues.

We now compute the correct zoom value, rather than relying on the last
one we see to be accurate.

BUG=704160

Review-Url: https://codereview.chromium.org/2764353002
Cr-Commit-Position: refs/heads/master@{#459069}

Former-commit-id: 08f7da01c04697fb873396bdf84b4ee34175fddd